styles.css
* {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
    font-family: 'Kumbh Sans', sans-serif;
}

:root {
    --background: #000;
    --primary: #E5C05F;
    --secondary: #B65B5D;
    --accent-one: #2364AA;
    --accent-two: #662C91;
    --dark: #332723;
    --dark-two: #141414;
    --white: #E8E9F3;
}
/* Navbar CSS */

header {
    background: var(--dark);
    text-align: center;
    position: fixed;
    z-index: 999;
    width: 100%;
    height: 80px;
    display: flex;
    align-items: center;
    justify-content: center;
}

.navbar-logo {
    font-weight: 550;
    background-image: linear-gradient(to top, var(--secondary) 0%, var(--primary) 100%);
    background-size: 100%;
    -webkit-background-clip: text;
    -moz-background-clip: text;
    -webkit-text-fill-color: transparent;
    -moz-text-fill-color: transparent;
    cursor: pointer;
    text-decoration: none;
    font-size: 2rem;
}

nav {
    position: absolute;
    text-align: left;
    top: 100%;
    left: 0;
    background: var(--dark-two);
    width: 100%;
    transform: scale(1, 0);
    transition: transform 400ms ease-in-out;
    transform-origin: top;
}

nav ul {
    list-style: none;
    padding-top: 15px;
}

nav li {
    margin-bottom: 1em;
    margin-left: 1em;
}

nav a {
    color: var(--white);
    text-decoration: none;
    font-size: 1.5rem;
    text-transform: uppercase;    
    transition: all 0.5s ease;
    opacity: 0;
    transition: opacity 150ms ease-in-out;
}

nav a:hover {
    color: var(--primary);
}

.nav-toggle {
    display: none;
}

.nav-toggle:checked ~ nav {
    background-color: var(--dark-two);
    transform: scale(1, 1);
}

.nav-toggle:checked ~ nav a{
    opacity: 1;
    transition: opacity 250ms ease-in-out 250ms;
}

.nav-toggle:checked ~ nav a:hover {
    transform-origin: center;
    transition: 250ms ease-in-out;
}

.nav-toggle-label {
    position: absolute;
    top: 0;
    left: 0;
    margin-left: 1em;
    height: 100%;
    display: flex;
    align-items: center;
    cursor: pointer;
}

.nav-toggle-label span,
.nav-toggle-label span::before,
.nav-toggle-label span::after {
    display: block;
    background: var(--primary);
    height: 2px;
    width: 2em;
    border-radius: 2px;
}

.nav-toggle-label span::before,
.nav-toggle-label span::after {
    content: '';
    position: absolute;
}

.nav-toggle-label span::before {
    bottom: 50px;
}

.nav-toggle-label span::after {
    top: 50px;
}

@media screen and (min-width: 860px) {
    .nav-toggle-label {
        display: none;
    }

    header {
        display: grid;
        height: 80px;
        align-items: center;
        grid-template-columns: 1fr auto minmax(600px, 3fr) 1fr;
    }

    .navbar-logo {
        grid-column: 2 / 3;
    }

    nav {
        all: unset;
        grid-column: 3 / 4;
        display: flex;
        justify-content: flex-end;
        align-items: center;
    }

    nav ul {
        display: flex;
    }

    nav li {
        margin-bottom: 0;
    }

    nav a {
        opacity: 1;
        position: relative;
        font-size: .94rem;
    }

    nav a:hover {
        color: var(--primary);
        transform-origin: center;
        transition: 250ms ease-in-out;
    }

    nav a::before {
        content: '';
        display: block;
        height: 3px;
        background-color: var(--secondary);
        position: absolute;
        top: -.5em;
        left: 0;
        right: 0;
        transform: scale(0, 1);
        transition: transform ease-in-out 250ms;
    }

    nav a:hover::before {
        transform: scale(1, 1);
    }
} 

/* Hero Section CSS */
.main {
    background-color: #000;
    padding-bottom: 7rem;
} 

.main-container {
    display: flex;
}

.main-container > * {
    flex: 0 0 50%;
}

.main-content {
    padding: 6rem 1rem 2rem;
}

.main-content h1 {
    font-size: 4rem;
    text-transform: uppercase;
    background-image: linear-gradient(to top, #B65B5D 0%, #E5C05F 100%);
    background-size: 100%;
    -webkit-background-clip: text;
    -moz-background-clip: text;
    -webkit-text-fill-color: transparent;
    -moz-text-fill-color: transparent;
}

.main-content h2 {
    font-size: 4rem;
    text-transform: uppercase;
    background-image: linear-gradient(to top, #E5C05F 0%, #B65B5D 100%);
    background-size: 100%;
    -webkit-background-clip: text;
    -moz-background-clip: text;
    -webkit-text-fill-color: transparent;
    -moz-text-fill-color: transparent;
}

.main-content p {
    color: #E8E9F3;
    margin-top: 1rem;
    font-size: 2rem;
    font-weight: 700;
}

.main-btn {
    background-image: linear-gradient(to top, #2364AA 0%, #662C91 100%);
    padding: 14px 32px;
    border: none;
    border-radius: 4px;
    margin-top: 2rem;
    cursor: pointer;
    position: relative;
}

.main-btn a {
    background: transparent;
    position: relative;
    z-index: 2;
    font-size: 1rem;
    color: #E8E9F3;
    text-decoration: none;
}

.main-btn:after {
    position: absolute;
    content: '';
    top: 0;
    left: 0;
    width: 0;
    height: 100%;
    background-image: linear-gradient(to top, #E5C05F 0%, #B65B5D 100%);
    transition: all 0.4s;
    border-radius: 4px;
}

.main-btn:hover:after {
    width: 100%
}

.main-img--container {
    text-align: center;
}

#main-img {
    height: 100%;
    width: 100%;
}

/* Mobile Responsiveness */

@media screen and (max-width: 768px) {
    .main-container {
        display: grid;
        grid-template-columns: auto;
        align-items: center;
        justify-self: center;
        width: 100%;
        margin: 0 auto;
        height: 90vh;
    }

    .main-content h1 {
        font-size: 2.5rem;
    }

    .main-content h2 {
        font-size: 3rem;
    }

    .main-content p {
        font-size: 1.5rem;
    }
}



/* Services section CSS */

.services {
    background: #000;
    color: #E8E9F3;
    display: flex;
    flex-direction: column;
    align-items: center;
}

.services h1 {
    background-color: #B65B5D;
    background-image: linear-gradient(to right, #B65B5D 0%, #E5C05F 100%);
    background-size: 100%;
    margin-bottom: 5rem;
    font-size: 2.5rem;
    -webkit-background-clip: text;
    -moz-background-clip: text;
    -webkit-text-fill-color: transparent;
    -moz-text-fill-color: transparent;
}

.services-container {
    display: flex;
    justify-content: center;
    flex-wrap: wrap;
}

.services-card {
    margin: 1rem;
    height: 25rem;
    width: 17rem;
    border-radius: 5px;
    background-image: linear-gradient(
        to bottom, rgba(0,0,0,0) 0%, 
        rgb(0, 0, 0, .9) 100%), 
        url('/images/Cribz-awards.jpg');
    background-size: cover;
    position: relative;
    color: #E8E9F3;
    transition: 0.3s ease-in;
}

.services-card:nth-child(2) {
    background-image: linear-gradient(
        to bottom, rgba(0,0,0,0) 0%, 
        rgba(0, 0, 0, 0.5) 100%), 
        url('/images/Cribz-puppy.jpg');
}

.card-text {
   position: absolute;
   bottom: 5em;
   left: 1em;
}

.services-card button {
    color: #332723;
    padding: 10px 20px;
    border: none;
    outline: none;
    border-radius: 4px;
    background: #E5C05F;
    position: absolute;
    bottom: 2em;
    left: 1em;
    font-size: 1rem;
    cursor: pointer;
    transition: all 0.3s;
}

.services-card button:hover {
    background: transparent;
    border: 1px solid #E5C05F;
    color: #E5C05F;
    transition: all 0.3s;
}

.services-card:hover {
    transform: scale(1.075);
    transition: 0.3s ease-in;
}

/* .services {
    background: #000;
    color: #E8E9F3;
    display: flex;
    flex-direction: column;
    align-items: center;
    height: 100vh;
}

.services-container {
    display: flex;
    justify-content: center;
    flex-wrap: wrap;
}

.services-card {
    margin: 1rem;
    height: 525px;
    width: 400px;
    border-radius: 4px;
    background-image: linear-gradient(
        to bottom, rgba(0,0,0,0) 0%, 
        rgb(0, 0, 0, .9) 100%), 
        url('/images/Cribz-awards.jpg');
    background-size: cover;
    position: relative;
    color: #E8E9F3;
    transition: 0.3s ease-in;
}

.services-card:nth-child(2) {
    background-image: linear-gradient(
        to bottom, rgba(0,0,0,0) 0%, 
        rgba(0, 0, 0, 0.5) 100%), 
        url('/images/Cribz-puppy.jpg');
}

.services h2 {
    position: absolute;
    top: 360px;
    left: 30px;
}

.services p { 
    position: absolute;
    top: 400px;
    left: 30px;
}

.services-card button {
    color: #332723;
    padding: 10px 20px;
    border: none;
    outline: none;
    border-radius: 4px;
    background: #E5C05F;
    position: absolute;
    top: 440px;
    left: 30px;
    font-size: 1rem;
    cursor: pointer;
    transition: all 0.3s;
}

.services-card button:hover {
    background: transparent;
    border: 1px solid #E5C05F;
    color: #E5C05F;
    transition: all 0.3s;
}

.services-card:hover {
    transform: scale(1.075);
    transition: 0.3s ease-in;
}

@media screen and (max-width: 960px) {
    .services {
        height: 1600px;
    }

    .services h1 {
        font-size: 2rem;
    }
}

@media screen and (max-width:480px) {
    .services {
        height: 1400px;
    }

    .services h1 {
        font-size: 1.2rem;
    }

    .services-card {
        width: 400px;
    }
} */

/* Footer CSS */

.footer-container {
    background-color: #000;
    color: #E8E9F3;
    padding: 5rem 0;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

#footer-logo {
    color: #E5C05F;
    display: flex;
    align-items: center;
    cursor: pointer;
    text-decoration: none;
    font-size: 2rem;
}

.footer-links {
    width: 100%;
    max-width: 1000px;
    display: flex;
    justify-content: center;
}

.footer-links--wrapper {
    display: flex;
}

.footer-links--items {
    display: flex;
    flex-direction: column;
    margin: 16px;
    text-align: left;
    width: 160px;
    box-sizing: border-box;
}

.footer-links--items h2 {
    margin-bottom: 16px;
    color: #E5C05F;
}

.footer-links--items a {
    color: #E8E9F3;
    text-decoration: none;
    margin-bottom: 0.5rem;
}

.footer-links--items a:hover {
    color: #B65B5D;
    transition: 0.3s ease-out;
}

/* Social Icons */

.social-icon--link {
    font-size: 24px;
    color: #E5C05F;
    transition: 0.3s ease-in;
}

.social-icon--link:hover {
    color: #B65B5D;
    transition: 0.3s ease-in;
}

.social-media {
    max-width: 1000px;
    width: 100%;
}

.social-media--wrapper {
    display: flex;
    justify-content: space-between;
    align-items: center;
    width: 90%;
    max-width: 1000px;
    margin: 40px auto 0 auto;
}

.social-icons {
    display: flex;
    justify-content: space-between;
    align-items: center;
    width: 100px;
}

#footer-logo {
    color: #E5C05F;
    justify-self: flex-start;
    margin-left: 20px;
    font-size: 2rem;
    margin-bottom: 16px;
    transition: 0.3s ease-in;
}

#footer-logo:hover {
    color: #B65B5D;
    transition: 0.3s ease-in;
}

@media screen and (max-width: 820px) {
    .footer-links--wrapper {
        flex-direction: column;
    }
     
    .social-media--wrapper {
        flex-direction: column;
    }

    .website-rights {
        margin-bottom: 1.5rem;
    }
}

